Fix very low color contrast on disabled inputs

--- a/web/assets/scss/_theme.scss
+++ b/web/assets/scss/_theme.scss
@@ -71,6 +71,8 @@ $accordion-icon-transform: rotate(-180deg);
 $input-bg: $white;
 $input-color: $grey-900;
 $input-border-color: $grey-700;
+$input-disabled-bg: #3d444c;
+$input-disabled-color: #ebebeb;
 $input-border-width: 1px;
 $input-border-radius: 16px;
 $input-padding-y: 12px;
